[package]
name = "plugin-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.82"
itertools = "0.12.1"
log = "0.4.21"
perf-event2 = "0.7.2"
serde = { version = "1.0.199", features = ["derive"] }
