[package]
name = "plugin-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
humantime-serde = "1.1.1"
itertools = "0.13.0"
log = "0.4.22"
perf-event2 = "0.7.4"
serde = { version = "1.0.210", features = ["derive"] }

[lints]
workspace = true
