[package]
name = "plugin-prometheus-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.86"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
tokio = { version = "1.38.0", features = ["rt", "net"] }
